<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="16dp"
    tools:showIn="@layout/activity_detail"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detail_content">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="76dp"
            android:fontFamily="@font/krona_one"
            android:text="@string/released"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="@+id/profileImage"
            app:layout_constraintVertical_bias="0.019" />

        <TextView
            android:id="@+id/tv_released"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/krona_one"
            android:text="@string/textDate"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.067" />

        <TextView
            android:id="@+id/textRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/krona_one"
            android:text="@string/textRating"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/profileImage"
            app:layout_constraintEnd_toEndOf="@+id/text_update"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_update"
            app:layout_constraintTop_toBottomOf="@+id/text_update"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/krona_one"
            android:text="@string/update"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/text_genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/krona_one"
            android:text="@string/textDate"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_update"
            app:layout_constraintEnd_toEndOf="@+id/tv_released"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toEndOf="@+id/text_update"
            app:layout_constraintTop_toTopOf="@+id/text_update"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/rounded_style"
            app:layout_constraintBottom_toBottomOf="@+id/textRating"
            app:layout_constraintEnd_toEndOf="@+id/tv_released"
            app:layout_constraintStart_toEndOf="@+id/textRating"
            app:layout_constraintTop_toTopOf="@+id/textRating"
            app:strokeColor="@color/green"
            app:strokeWidth="2dp">

            <TextView
                android:id="@+id/tv_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/krona_one"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/sampleRating"
                android:textColor="@color/green"
                android:textSize="12sp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/krona_one"
            android:text="@string/genre"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            tools:itemCount="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/text_genre"
            app:layout_constraintTop_toBottomOf="@+id/text_genre"
            tools:listitem="@layout/item_list_genre" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/krona_one"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_genre"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_genre" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/krona_one"
            android:text="@string/sampleText"
            android:layout_marginStart="16dp"
            android:textSize="15sp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_genre"
            app:layout_constraintTop_toBottomOf="@+id/text_description"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/krona_one"
            android:text="@string/website"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_genre"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/website_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/krona_one"
            android:text="@string/sampleText2"
            android:textSize="15sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_website"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>